[gd_scene load_steps=2 format=2]

[ext_resource path="res://SFXAudioSMB1.gd" type="Script" id=1]

[node name="PersistentAudioSMB1" type="AudioStreamPlayer"]
bus = "LeftRight"
script = ExtResource( 1 )

[node name="DeleteTimer" type="Timer" parent="."]
[connection signal="timeout" from="DeleteTimer" to="." method="_on_DeleteTimer_timeout"]
